# eor_copilot

./: .gitignore  PRODUCTION.md  README.md  SYSTEM_DESIGN.md  app.py  pyproject.toml
data/policies/: DE_termination_v1.json  ES_onboarding_v1.json  FR_notice_v1.json  IT_payroll_v1.json  NL_benefits_v1.json  PL_onboarding_v1.json
evaluation/: EVALUATION.md  retrieval_eval.py  test_queries.json
outputs/: policy_graph.dot  policy_graph.json
scripts/: multilingual_demo.py  policy_coverage.py  policy_graph.py
src/agents/: country_detection.py  generator.py  policy_coverage.py  policy_graph.py  policy_schema.py  prompts.py  query_understanding.py  retriever.py  safety.py  translation.py  verifier.py
tests/: test_country_detection.py  test_staleness.py  test_verifier.py
